--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -290,9 +290,8 @@ width=\textwidth]{figs/weapon_reg-queue.pdf}
 \vspace{-5mm}
 \caption{Summary of CORELS's logical queue,
 for the NYCLU stop-and-frisk dataset (${M = 28}$),
-for same three regularization parameters as in Figure~\ref{fig:sparsity} (bottom).
-%
-See also Table~\ref{tab:weapon-reg}.
+for same three regularization parameters as in Figure~\ref{fig:sparsity} (bottom)
+and Table~\ref{tab:weapon-reg}.
 %
 Solid lines plot the numbers of prefixes in the logical queue (log scale), colored by length (legend),
 as a function of wall clock time (log scale).
