Created long implementation section for arxiv paper.
Split up the data structure parts into their own sections. Added to
garbage collection description. Integrated curiosity description.

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -62,7 +62,7 @@
 
 \input{sections/bounds}
 
-\input{sections/implementation}
+\input{sections/implementation-long}
 
 \input{sections/experiments-long}
 
