Implementation comes after Incremental computation

--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -1,9 +1,11 @@
+\input{sections/incremental}
+
 \section{Implementation}
 \label{sec:implementation}
 
-\input{sections/incremental}
+Our implementation of CORELS can be found at \\
 
-Our implementation of CORELS can be found at \url{https://github.com/nlarusstone/corels}.\\
+\url{https://github.com/nlarusstone/corels}.\\
 
 We implement our algorithm using a collection of optimized data structures: a trie (prefix tree), a symmetry-aware map, and a queue.
 
