--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -268,7 +268,7 @@ and that the symmetry-aware map elements correspond to the trie's nodes.
 
 The upper panels in Figure~\ref{fig:weapon-reg-execution} plot example execution traces,
 from a single cross-validation fold, of both the current best objective value~$\CurrentObj$
-and the lower bound~$\b(\Prefix, \x, \y)$ of the prefix~$\Prefix$ being evaluated.
+and the lower bound~$b(\Prefix, \x, \y)$ of the prefix~$\Prefix$ being evaluated.
 %
 These plots clearly illustrate that CORELS certifies optimality
 when the lower bound matches the objective value.
