Flesh out Laber citation

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -242,10 +242,14 @@ journal={},
 year={2006}
 }
 @article{ZhangLaTsDa2015,
-title={Using Decision Lists to Construct Interpretable and Parsimonious Treatment Regimes},
-author="Yichi Zhang and Eric B. Laber and Anastasios Tsiatis and Marie Davidian",
-journal={},
-year={2015}
+  title={Using decision lists to construct interpretable and parsimonious treatment regimes},
+  author={Zhang, Yichi and Laber, Eric B and Tsiatis, Anastasios and Davidian, Marie},
+  journal={Biometrics},
+  volume={71},
+  number={4},
+  pages={895--904},
+  year={2015},
+  publisher={Wiley Online Library}
 }
 @article{LiYa02,
 title = "Text classification using ESC-based stochastic decision lists ",
