Slow pass through sections on the trie and queue

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -73,7 +73,7 @@ Our results in~\S\ref{sec:examples} through~\S\ref{sec:sparsity}
 are from experiments that use 28 single-clause antecedents corresponding
 these 28 values, \eg (\emph{stop reason = suspicious object}).
 %
-Our experiments in~\S\ref{sec:traces} use the same antecedents,
+Our experiments in~\S\ref{sec:ablation} use the same antecedents,
 as well as negations of the 18 antecedents corresponding to the two features
 \emph{stop reason} and \emph{additional circumstances},
 which gives a total of 46 antecedents.
