--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -47,7 +47,7 @@ that each contain 50,743 datapoints.
 From a set of 5 categorical features, we form a set of~28 single-clause antecedents
 that we use in our experiments below, through~\S\ref{sec:sparsity}.
 %
-For our experiments in~\S\ref{sec:traces}, we add negations of 18 of these antecedents,
+For our experiments in~\S\ref{sec:ablation}, we add negations of 18 of these antecedents,
 which gives a total of 46 antecedents.
 \end{itemize}
 %
@@ -375,7 +375,7 @@ we also annotate the total time in seconds, marked with a dashed vertical line.
 \end{figure}
 
 \subsection{Efficacy of CORELS algorithm optimizations}
-\label{sec:traces}
+\label{sec:ablation}
 
 We determine the efficacy of each of our bounds and data structure optimizations.
 %
