Flesh out curiosity and move to back of implementation

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -206,10 +206,10 @@ For example, if ${\Prefix = (p_1, \dots, p_k, \dots, p_K)}$ is a prefix, then
 indicates whether antecedent~$p_k$ captures datum~$x_n$ in the context of~$\Prefix$.
 %
 Now, define ${\Supp(\beta, \x)}$ to be the normalized support of~$\beta$,
-\begin{align*}
+\begin{align}
 \Supp(\beta, \x) = \frac{1}{N} \sum_{n=1}^N \Cap(x_n, \beta),
-%\label{eq:support}
-\end{align*}
+\label{eq:support}
+\end{align}
 and similarly define~${\Supp(\beta, \x \given \Prefix)}$
 to be the normalized support of~$\beta$ in the context of~$\Prefix$,
 \begin{align}
