--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -8,8 +8,11 @@ that we describe in this section:
 a prefix trie (trie)~(\S\ref{sec:trie}), a queue~(\S\ref{sec:queue}),
 and a symmetry-aware map~(\S\ref{sec:pmap}).
 %
-We additionally highlight how our queue can be used to support
-custom scheduling policies designed to improve performance~(\S\ref{sec:scheduling}).
+In~\S\ref{sec:execution}, we summarize our incremental execution model,
+and in~\S\ref{sec:gc}, we describe how we garbage collect our data structures.
+%
+We additionally highlight in~\S\ref{sec:scheduling} how our queue can be used to support
+custom scheduling policies designed to improve performance.
 %
 Our implementation of CORELS can be found at: \\
 
@@ -42,15 +45,16 @@ we described in~\S\ref{sec:incremental}, and includes:
 \item The default rule label prediction~$\Default$.
 \item $\NCap$, the number of samples captured by prefix $\Prefix$, as in~\eqref{eq:num-cap}. % <-- not strictly necessary
 % \item The objective $\Obj(\RL, \x, \y)$~\eqref{eq:objective}. % <-- not strictly necessary
-\item The objective lower bound $b(\Prefix, \x, \y)$, defined in~\eqref{eq:lower-bound}.
+\item The objective lower bound $b(\Prefix, \x, \y)$, defined in~\eqref{eq:lower-bound},
+  the central bound in our framework (Theorem~\ref{thm:bound}).
 \item The lower bound on the default rule misclassification error
-  $b_0(\Prefix, \x, \y)$, defined in~\eqref{eq:lb-b0}
-  from our equivalent points bound (Theorem~\ref{thm:identical}).
+  $b_0(\Prefix, \x, \y)$, defined in~\eqref{eq:lb-b0},
+  to support our equivalent points bound (Theorem~\ref{thm:identical}).
 \item An indicator denoting whether or not this node should be deleted (see~\S\ref{sec:gc}).
 \item A representation of viable extensions of~$\Prefix$,
   \ie length ${K+1}$ rule lists that start with~$\Prefix$ and have not been pruned.
 \end{itemize}
-Note that we implement the prefix tree as a custom C++ class. % decouple artifact from design
+We note that we implement the prefix tree as a custom C++ class. % decouple artifact from design
 %
 % This might be a bit much detail for here
 %In addition to our base trie class, we also implemented a different node type that we use in our algorithm.
@@ -88,79 +92,6 @@ stochastic exploration processes that bypass the need for a queue
 by instead following random paths from the root to leaves;
 developing such methods could be an interesting direction for future work.
 
-\subsection{Custom scheduling policies}
-\label{sec:scheduling}
-
-In our setting, an ideal scheduling policy would immediately identify an optimal
-rule list, and then certify its optimality by systematically eliminating the
-remaining search space.
-%
-This motivates trying to design scheduling policies that tend to quickly find optimal rule lists.
-%
-When we use a priority queue to order the set of prefixes to evaluate next,
-we are free to implement different scheduling policies via the ordering of
-elements in the queue.
-%
-This motivates designing functions that assign higher priorities to `better'
-prefixes that we believe are more likely to lead to optimal rule lists.
-%
-Note that we follow the convention that priority queue elements are ordered
-by keys, such that keys with smaller values correspond to higher priorities.
-
-We introduce a custom function that we call \emph{curiosity}.
-%
-First, let~$\NCap$ denote the number of datapoints captured by~$\Prefix$, \ie
-\begin{align}
-\NCap \equiv \sum_{n=1}^N \Cap(x_n, \Prefix).
-\label{eq:num-cap}
-\end{align}
-%
-Now consider a simple model for the expected objective value of a rule list
-${\RL' = (\Prefix', \Labels', \Default', K')}$ generated from~$\Prefix$.
-%
-Assume that prefix~$\Prefix'$ starts with~$\Prefix$ and captures all the data,
-such that each additional antecedent in~$\Prefix'$
-both captures as many `new' datapoints and makes as many mistakes as
-as each antecedent in~$\Prefix$, on average.
-%
-We define curiosity as the expected objective value of~$\RL'$,
-which is equal to the sum of the expected prefix
-misclassification error and the expected regularization penalty:
-\begin{align}
-\Curiosity(\Prefix, \x, \y) \equiv \E[ \Obj(\RL', \x, \y) ] &= \E[\Loss_p(\Prefix, \Labels, \x, \y)] + \E[ \Reg K' ] \nn \\
-&= \E[ K' ] \left(\frac{\Loss_p(\Prefix, \Labels, \x, \y)}{K}\right) + \Reg \E[ K' ] \nn \\
-&=  \left(\frac{N}{\NCap / K}\right)
-  \left(\frac{\Loss_p(\Prefix, \Labels, \x, \y)}{K}\right)
-  + \Reg \left(\frac{N}{\NCap / K}\right) \nn \\
-&= \left( \frac{N}{\NCap} \right) \biggl(\Loss_p(\Prefix, \Labels, \x, \y) + \Reg K \biggr) \nn \\
-&= \left( \frac{1}{N} \sum_{n=1}^N \Cap(x_n, \Prefix) \right)^{-1} b(\Prefix, \x, \y)
-= \frac{b(\Prefix, \x, \y)}{\Supp(\Prefix, \x)}. \nn
-\end{align}
-%
-The curiosity for a prefix~$\Prefix$ is thus also equal to its objective lower bound,
-scaled by the inverse of its normalized support.
-%
-For two prefixes with the same lower bound, curiosity gives higher priority to
-the one that captures more data.
-%
-This is a well-motivated scheduling strategy if we model prefixes that extend
-the prefix with smaller support as having more `potential' to make mistakes.
-%
-We note that using curiosity in practice does not introduce new bit vector
-or other expensive computations; during execution, we can calculate curiosity
-as a simple function of already derived quantities.
-
-In preliminary experiments, we observe that using a priority queue ordered by
-curiosity sometimes yields a dramatic reduction in execution time,
-compared to using a priority queue ordered by the objective lower bound.
-%
-Thus far, we have observed significant benefits on specific small problems,
-where the structure of the solutions happen to render curiosity particularly
-effective (not shown).
-%
-Designing and studying other `curious' functions, that are effective in more
-general settings, is an exciting direction for future work.
-
 \subsection{Symmetry-aware map}
 \label{sec:pmap}
 
@@ -176,6 +107,7 @@ Otherwise, if a permutation $P_j$ exists and the lower bound of $P_i$ is better 
 Else, if $P_j$ exists and has a better lower bound than $P_i$, we do nothing  (\ie we do not insert $P_i$ into the symmetry-aware map or the trie).
 
 \subsection{Incremental execution}
+\label{sec:execution}
 
 Mapping our algorithm to our data structures produces the following execution strategy.
 %
@@ -199,7 +131,7 @@ When there are no more leaves to explore, we are able to return the optimal rule
 %
 We can also choose to terminate
 
-\subsection{Garbage Collection}
+\subsection{Garbage collection}
 \label{sec:gc}
 
 During execution, we garbage collect the trie.
@@ -221,3 +153,109 @@ Therefore we cannot access elements in the middle of the queue, even if we have 
 Thus, we run into a problem where we want to delete something in the prefix tree that is currently in the queue, as we have no way to update the queue without iterating over every element.
 We address this by lazily marking nodes deleted in the prefix tree without deleting the physical node until it has been removed from the queue.
 We define two different queues: the collection of all leaves in the C++ queue is our physical queue while the collection of leaves that are not marked deleted is our logical queue.
+
+\subsection{Custom scheduling policies}
+\label{sec:scheduling}
+
+In our setting, an ideal scheduling policy would immediately identify an optimal
+rule list, and then certify its optimality by systematically eliminating the
+remaining search space.
+%
+This motivates trying to design scheduling policies that tend to quickly find optimal rule lists.
+%
+When we use a priority queue to order the set of prefixes to evaluate next,
+we are free to implement different scheduling policies via the ordering of
+elements in the queue.
+%
+This motivates designing functions that assign higher priorities to `better'
+prefixes that we believe are more likely to lead to optimal rule lists.
+%
+Note that we follow the convention that priority queue elements are ordered
+by keys, such that keys with smaller values correspond to higher priorities.
+
+We introduce a custom class of functions that we call \emph{curiosity} functions.
+%
+Broadly, we think of the curiosity of a rule list~$\RL$
+as the expected objective value of another rule list~$\RL'$ that is related to~$\RL$;
+different models of the relationship between~$\RL$ and~$\RL'$ lead to different
+curiosity functions.
+%
+In general, the curiosity of~$\RL$ is by definition equal to the sum of the expected
+misclassification error and the expected regularization penalty of~$\RL'$:
+\begin{align}
+\Curiosity(\Prefix, \x, \y) \equiv \E[ \Obj(\RL', \x, \y) ]
+&= \E[\Loss(\Prefix', \Labels', \x, \y)] + \Reg \E[ K' ].
+\label{eq:curiosity}
+\end{align}
+
+Next, we describe a simple curiosity function for a rule list~$\RL$ with prefix~$\Prefix$.
+%
+First, let~$\NCap$ denote the number of datapoints captured by~$\Prefix$, \ie
+\begin{align}
+\NCap \equiv \sum_{n=1}^N \Cap(x_n, \Prefix).
+\label{eq:num-cap}
+\end{align}
+We now describe a model that generates another
+rule list~${\RL' = (\Prefix', \Labels', \Default', K')}$ from~$\Prefix$.
+%
+Assume that prefix~$\Prefix'$ starts with~$\Prefix$ and captures all the data,
+such that each additional antecedent in~$\Prefix'$
+captures as many `new' datapoints as each antecedent in~$\Prefix$, on average;
+then, the expected length of~$\Prefix'$ is:
+\begin{align}
+\E[ K' ] = \frac{N}{\NCap / K}.
+\label{eq:curiosity-length}
+\end{align}
+Furthermore, assume that each additional antecedent in~$\Prefix'$
+makes as many mistakes as each antecedent in~$\Prefix$, on average,
+thus the expected misclassification error of~$\Prefix'$ is:
+\begin{align}
+\E[\Loss(\Prefix', \Labels', \x, \y)]
+&= \E[\Loss_p(\Prefix', \Labels', \x, \y)] + \E[\Loss_0(\Prefix', \Default', \x, \y)] \nn \\
+&= \E[\Loss_p(\Prefix', \Labels', \x, \y)]
+=  \E[ K' ] \left(\frac{\Loss_p(\Prefix, \Labels, \x, \y)}{K}\right).
+\label{eq:curiosity-error}
+\end{align}
+Note that the default rule misclassification error~$\Loss_0(\Prefix', \Default', \x, \y)$
+is zero because we assume that~$\Prefix'$ captures all the data.
+%
+Combining~\eqref{eq:curiosity-length}~\eqref{eq:curiosity-error} and thus gives
+curiosity for this model:
+\begin{align*}
+\Curiosity(\Prefix, \x, \y)
+%= \E[\Loss_p(\Prefix', \Labels', \x, \y)] + \Reg \E[ K' ]
+%&= \E[ K' ] \left(\frac{\Loss_p(\Prefix, \Labels, \x, \y)}{K}\right) + \Reg \E[ K' ] \\
+%&=  \left(\frac{N}{\NCap / K}\right)
+%  \left(\frac{\Loss_p(\Prefix, \Labels, \x, \y)}{K}\right)
+%  + \Reg \left(\frac{N}{\NCap / K}\right) \nn \\
+&= \left( \frac{N}{\NCap} \right) \biggl(\Loss_p(\Prefix, \Labels, \x, \y) + \Reg K \biggr) \\
+&= \left( \frac{1}{N} \sum_{n=1}^N \Cap(x_n, \Prefix) \right)^{-1} b(\Prefix, \x, \y)
+= \frac{b(\Prefix, \x, \y)}{\Supp(\Prefix, \x)},
+\end{align*}
+where for the second equality, we used the definitions of $\NCap$~\eqref{eq:num-cap}
+and $\Prefix$'s lower bound~\eqref{eq:lower-bound}, and for the last equality,
+we used the definition of $\Prefix$'s normalized support~\eqref{eq:support}.
+
+The curiosity for a prefix~$\Prefix$ is thus also equal to its objective lower bound,
+scaled by the inverse of its normalized support.
+%
+For two prefixes with the same lower bound, curiosity gives higher priority to
+the one that captures more data.
+%
+This is a well-motivated scheduling strategy if we model prefixes that extend
+the prefix with smaller support as having more `potential' to make mistakes.
+%
+We note that using curiosity in practice does not introduce new bit vector
+or other expensive computations; during execution, we can calculate curiosity
+as a simple function of already derived quantities.
+
+In preliminary experiments, we observe that using a priority queue ordered by
+curiosity sometimes yields a dramatic reduction in execution time,
+compared to using a priority queue ordered by the objective lower bound.
+%
+Thus far, we have observed significant benefits on specific small problems,
+where the structure of the solutions happen to render curiosity particularly
+effective (not shown).
+%
+Designing and studying other `curious' functions, that are effective in more
+general settings, is an exciting direction for future work.
